CMAKE_MINIMUM_REQUIRED(VERSION 3.8)

PROJECT("xd") #TODO: version?!

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
include(${CMAKE_ROOT}/Modules/ExternalProject.cmake)


FILE(GLOB_RECURSE HEADERS LIST_DIRECTORIES false "include/*.hpp")
FILE(GLOB SOURCES_TEMP LIST_DIRECTORIES false "src/audio/*.cpp")
SET(SOURCES ${SOURCES_TEMP})
FILE(GLOB SOURCES_TEMP LIST_DIRECTORIES false "src/graphics/*.cpp")
SET(SOURCES ${SOURCES} ${SOURCES_TEMP})
FILE(GLOB SOURCES_TEMP LIST_DIRECTORIES false "src/lua/*.cpp")
SET(SOURCES ${SOURCES} ${SOURCES_TEMP})
FILE(GLOB SOURCES_TEMP LIST_DIRECTORIES false "src/system/*.cpp")
SET(SOURCES ${SOURCES} ${SOURCES_TEMP})

#dependencies we expect the user takes care of
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(Freetype REQUIRED)
FIND_PACKAGE(Harfbuzz REQUIRED)
FIND_PACKAGE(DevIL REQUIRED)
FIND_PACKAGE(Lua REQUIRED)
FIND_PACKAGE(Glfw REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

#dependencies we build ourselves
ExternalProject_Add(LuaBind
  GIT_REPOSITORY "https://github.com/Oberon00/luabind.git"
  GIT_TAG "master"
  PREFIX ${CMAKE_CURRENT_BINARY_DIR}/LuaBind 
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
)

#MESSAGE("Headers are: " ${HEADERS})
#MESSAGE("Sources are: " ${SOURCES})

INCLUDE_DIRECTORIES("include/" ${FREETYPE_INCLUDE_DIRS})
INCLUDE_DIRECTORIES("${CMAKE_BINARY_DIR}/LuaBind/include")
INCLUDE_DIRECTORIES(${GLFW_INCLUDE_DIR})

# some hacks that need to go away
ADD_DEFINITIONS(-DUSE_LINUX_INCLUDE_PATHS)


ADD_LIBRARY(xd STATIC ${SOURCES})
ADD_DEPENDENCIES(xd LuaBind)

